Fix saving/loading colorized masks after cropping them

The key strokes' metadata doesn't store the offset, the offset
should be copied from the mask itself.

BUG:425831