libs/global/kis_dom_utils.h
@@ -272,6 +272,22 @@ template <template <class> class Container, typename T, typename E = std::tuple<
     return true;
 }
 
+template <template <class> class Container, typename T, typename E, typename F>
+    bool loadValue(const QDomElement &e, Container<T> *array, const E &env1, const F &env2)
+
+{
+    if (!Private::checkType(e, "array")) return false;
+
+    QDomElement child = e.firstChildElement();
+    while (!child.isNull()) {
+        T value;
+        if (!loadValue(child, &value, env1, env2)) return false;
+        *array << value;
+        child = child.nextSiblingElement();
+    }
+    return true;
+}
+
 template <typename T, typename E = std::tuple<>>
     bool loadValue(const QDomElement &parent, const QString &tag, T *value, const E &env = E())
 {
@@ -281,6 +297,14 @@ template <typename T, typename E = std::tuple<>>
     return loadValue(e, value, env);
 }
 
+template <typename T, typename E, typename F>
+    bool loadValue(const QDomElement &parent, const QString &tag, T *value, const E &env1, const F &env2)
+{
+    QDomElement e;
+    if (!findOnlyElement(parent, tag, &e)) return false;
+
+    return loadValue(e, value, env1, env2);
+}
 
 
 KRITAGLOBAL_EXPORT QDomElement findElementByAttibute(QDomNode parent,
